[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robobrain"
version = "0.0.1"
authors = [
  { name="Evan Shlom", email="me@evanshlom.com" },
]
description = "Framework for developing productive and intelligent robot solutions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/evanshlom/robobrain.git"
"Bug Tracker" = "https://github.com/evanshlom/robobrain.git/issues"